# ApertureUI

./: .gitattributes  .gitignore  .gitmodules  APUISubmoduleInit.cmd  CMakeLists.txt  GenerateNintendo.bat  GenerateProspero.bat  GenerateScarlett.bat  GenerateXboxOne.bat  LICENSE  LICENSE.md  LICENSEJAVASCRIPTCORE.TXT  README.md  README_BUILD_GUIDE.txt  RunCMake.sh  SECURITY.md  nsCMakeConfig.cmake  thirdpartylicenses.txt  version.txt
Code/ApertureUIAppCore/APAppCore/: CMakeLists.txt
Code/ApertureUISource/APHTML/: APEngine.cpp  APEngine.h  APEngineCommonIncludes.h  APEngineDLL.h  APEnginePCH.cpp  CMakeLists.txt  apertureuihtmlengine.rc  resource.h
Code/ApertureUISource/APHTML/API/: APUIView.h
Code/ApertureUISource/APHTML/CommandExecutor/: IAPCCommand.cpp  IAPCCommand.h  IAPCCommandList.cpp  IAPCCommandList.h  IAPCCommandQueue.cpp  IAPCCommandQueue.h
Code/ApertureUISource/APHTML/Database/: APDatabase.h
Code/ApertureUISource/APHTML/Font/: Font.h  TextAlignment.h
Code/ApertureUISource/APHTML/Interfaces/: APCFileSystem.cpp  APCFileSystem.h  APCHarrlowInterface.h  APCLoggingSystem.h  APCMemoryAllocator.cpp  APCMemoryAllocator.h  APCPlatform.cpp  APCPlatform.h  APCProfilerSystem.h  APCSystemInterface.h  APCUtils.h
Code/ApertureUISource/APHTML/Interfaces/Internal/: APCBuffer.h  APCObjectPool.h  APCObjectTree.h
Code/ApertureUISource/APHTML/License/: APCLicenseDatabase.h
Code/ApertureUISource/APHTML/Localization/: ICUCharset.cpp  ICUCharset.h
Code/ApertureUISource/APHTML/Multithreading/: APCJobSystem.cpp  APCJobSystem.h
Code/ApertureUISource/APHTML/V8Engine/: V8EngineDLL.h
Code/ApertureUISource/APHTML/V8Engine/Binding/: V8EBinder.cpp  V8EBinder.h
Code/ApertureUISource/APHTML/V8Engine/Core/: V8EngineMain.cpp  V8EngineMain.h  V8EngineRuntime.cpp  V8EngineRuntime.h
Code/ApertureUISource/APHTML/V8Engine/System/: V8EArrayBufferAlloc.h
Code/ApertureUISource/APHTML/V8Engine/System/Internal/: V8EAsniAllocator.h  V8EObjectHandle.h  V8ESArray.h  V8ESIndex.h  V8Helpers.h
Code/ApertureUISource/APHTML/V8Engine/System/JobSystem/: V8EJobManager.cpp  V8EJobManager.h
Code/ApertureUISource/APHTML/V8Engine/System/Time/: V8EJSTimerAction.h
Code/ApertureUISource/APHTML/V8Engine/System/Utils/: V8ESourceMap.cpp  V8ESourceMap.h  V8ESourceMapCache.h
Code/ApertureUISource/APHTML/V8Engine/System/Utils/Multithreading/: V8EThreadSafeIsolate.cpp  V8EThreadSafeIsolate.h
Code/ApertureUISource/APHTML/V8Engine/Tasks/: BindingCacheTask.h
Code/ApertureUISource/APHTML/V8Engine/Utils/: V8EValueMover.cpp  V8EValueMover.h
Code/ApertureUISource/APHTML/WDVideo/: CMakeLists.txt  WDVEngineDLL.h  WDVEnginePCH.h
Code/ApertureUISource/APHTML/WDVideo/Audio/: AudioDecoderVPX.cpp  AudioDecoderVPX.h
Code/ApertureUISource/APHTML/WDVideo/Interface/: IWDVFileInterface.h  IWDVFrame.cpp  IWDVFrame.h  IWDVFrameBuffer.cpp  IWDVFrameBuffer.h  IWDVPacket.h  IWDVPacketQueue.h  IWDVideoPlayer.h
Code/ApertureUISource/APHTML/WDVideo/Video/: VideoPlayerWebm.cpp  VideoPlayerWebm.h
Code/ApertureUISource/APHTML/animation/: Animation.h  AnimationBaseEvaluator.h  AnimationManager.h  AnimationTrigger.h  AnimationTypes.h
Code/ApertureUISource/APHTML/core/: BaseDocument.h  BaseElement.h  BaseProperty.h  CSSController.h  ID.h  NumericValue.h  SCTypes.h  ScrollController.h  Unit.h
Code/ApertureUISource/APHTML/css/: CSSErrorDB.cpp  CSSErrorDB.h  CSSStandard.h  README-SUPPORTED-CSS.md
Code/ApertureUISource/APHTML/css/AST/: ASTObject.h  CSSProperty.h
Code/ApertureUISource/APHTML/css/BasicParsers/: CSSIdentifiers.h
Code/ApertureUISource/APHTML/css/Function/: CSSIFunction.h  CSSVarFunction.cpp  CSSVarFunction.h  CSSVarVariant.h
Code/ApertureUISource/APHTML/css/Parser/: CSSParser.h  CSSParserUtils.hpp  CSSRuleParser.cpp  CSSRuleParser.h
Code/ApertureUISource/APHTML/css/functions/: CSSIFunction.h  CSSVarFunction.cpp  CSSVarFunction.h  CSSVarVariant.h
Code/ApertureUISource/APHTML/css/parser/: CSSSpirit.h
Code/ApertureUISource/APHTML/css/syntax/: CSSPropertyUtils.h  CSSSyntaxCommon.h  CSSSyntaxFunctions.h  CSSSyntaxProperties.h
Code/ApertureUISource/APHTML/dom/: DOMAttribute.cpp  DOMAttribute.h  DOMCDataSection.h  DOMCollection.cpp  DOMCollection.h  DOMComment.h  DOMDocument.h  DOMElement.cpp  DOMElement.h  DOMError.h  DOMInformation.h  DOMManager.cpp  DOMManager.h  DOMNode.cpp  DOMNode.h  DOMPrefixTree.h  DOMString.h
Code/ApertureUISource/APHTML/dom/events/: DOMEvent.h  DOMKeyboardEvent.h
Code/ApertureUISource/APHTML/layout/: Box.cpp  Box.h
Code/ApertureUISource/APHTML/layout/Core/: BlockContainer.h  InlineBox.cpp  InlineBox.h  InlineContainer.cpp  InlineContainer.h  LayoutCore.h  LayoutDefinitions.h  LayoutManager.h  LayoutNode.cpp  LayoutNode.h  YogaGridLayoutNode.h  YogaLayoutNode.cpp  YogaLayoutNode.h
Code/ApertureUISource/APHTML/layout/Internal/: DPIUtils.h
Code/ApertureUISource/APHTML/uri/: URIBank.cpp  URIBank.h  URIManager.cpp  URIManager.h
Code/ApertureUISource/APHTML/xml/: XMLDocument.cpp  XMLDocument.h
Code/ApertureUISource/APHarrlow/: APEngineDLL.h  APEnginePCH.cpp  CMakeLists.txt  apertureuiharrlowengine.rc
Code/ApertureUISource/APHarrlow/RenderPath/: Types.h
Code/ApertureUISource/APHarrlow/RenderPath/Interfaces/: APHIRenderPath.h  APHITexture.h
Code/ApertureUISource/APHarrlow/RenderPath/interface/: APHIRenderPath.h
Code/ApertureUISource/APHarrlow/VectorEngine/: APHarrlowVectorEngine.hpp
Code/ApertureUISource/APHarrlow/VectorEngine/Core/: BufferStore.cpp  BufferStore.hpp  Common.cpp  Common.hpp  Drawer.cpp  Drawer.hpp  Math.cpp  Math.hpp  Text.cpp  Text.hpp  Vectors.hpp
Code/ApertureUISource/APHarrlow/VectorEngine/Utility/: Utility.cpp  Utility.hpp
Code/ApertureUISource/APTextToSpeech/: CMakeLists.txt  TTSDLL.h  TTSPCH.cpp
Documentation/: Doxyfile  Readme.md
Scripts/: v8.scarlett_x64.args.gn  v8.windows_x64.args.gn
(+207 files in other folders)
