# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.

# Windows, Use DLLS?
is_component_build = true 
is_debug = false
target_cpu = "x64"
target_os = "win"
v8_enable_i18n_support = true
v8_monolithic = false
v8_use_external_startup_data = true
v8_enable_pointer_compression = true
v8_jitless = false                  # jit enabled

use_custom_libcxx = false           # false will produce warnings
treat_warnings_as_errors = false    # 
v8_symbol_level = 0                 # smaller lib 
v8_enable_sandbox = false 
